src/objects/TR1__Fixed_Assets__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Asset_Life__c</fullName>
        <label>Asset Life</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Date_Into_Service__c</fullName>
        <label>Date Into Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Device_Name__c</fullName>
        <label>Device Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Device_Type__c</fullName>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Network Component</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Disposal_Amount__c</fullName>
        <label>Disposal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Disposal_Date__c</fullName>
        <label>Disposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Disposal_Reason__c</fullName>
        <label>Disposal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Stolen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Make__c</fullName>
        <label>Make</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Memory__c</fullName>
        <label>Memory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Model__c</fullName>
        <label>Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__OS_Installed__c</fullName>
        <label>OS Installed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mac OS X 10.8</fullName>
                </value>
                <value>
                    <fullName>Mac OS X 10.9</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Server Pro</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Server Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Server R2 Enterprise</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Server R2 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Server Std</fullName>
                </value>
                <value>
                    <fullName>Windows 7 32 Bit</fullName>
                </value>
                <value>
                    <fullName>Windows 7 64 bit</fullName>
                </value>
                <value>
                    <fullName>Windows Server 2012 Std</fullName>
                </value>
                <value>
                    <fullName>Windows Vista 32 Bit</fullName>
                </value>
                <value>
                    <fullName>XP Home</fullName>
                </value>
                <value>
                    <fullName>XP Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__OS_License__c</fullName>
        <label>OS License</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Processor__c</fullName>
        <label>Processor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Purchase_Amount__c</fullName>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Purpose__c</fullName>
        <label>Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Service_Tag__c</fullName>
        <label>Service Tag</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Software_1_License_Key__c</fullName>
        <label>Software 1 License Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Software_1__c</fullName>
        <label>Software 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Software_2_License_Key__c</fullName>
        <label>Software 2 License Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Software_2__c</fullName>
        <label>Software 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Software_3_License_Key__c</fullName>
        <label>Software 3 License Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Software_3__c</fullName>
        <label>Software 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Vendor__c</fullName>
        <label>Vendor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Warranty_Expires__c</fullName>
        <label>Warranty Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Warranty_Type__c</fullName>
        <label>Warranty Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Fixed Asset</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FA-{00000}-{00}</displayFormat>
        <label>Fixed Assets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixed Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>